--- a/index.html
+++ b/index.html
@@ -34,65 +34,65 @@ data-styled.g9[id="Body__BodyWrapper-sc-v34kqr-0"]{content:"oVFRU,"}/*!sc*/
 .gUOgk{margin-top:32px;padding:40px 0;border-top:1px solid #e9ecef;text-align:center;font-size:11pt;font-weight:lighter;color:#404040;}/*!sc*/
 .gUOgk > a{color:#191919;}/*!sc*/
 data-styled.g10[id="Footer__FooterWrapper-sc-1qfqdid-0"]{content:"gUOgk,"}/*!sc*/
+.cYswnL{margin-bottom:24px;font-size:32px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
+.cYswnL > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
+.cYswnL > a:hover{color:#404040;}/*!sc*/
+data-styled.g11[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"cYswnL,"}/*!sc*/
+.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
+data-styled.g12[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
+.fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
+data-styled.g13[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
+.OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
+.OSwVR:hover{background-color:#dee2e6;}/*!sc*/
+data-styled.g14[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
+@media (max-width:768px){.euTAqz{padding:0 10px;}}/*!sc*/
+data-styled.g15[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
+.bZxncx{position:relative;top:0;-webkit-transition:all 0.5s;transition:all 0.5s;}/*!sc*/
+@media (max-width:768px){.bZxncx{padding:0 5px;}}/*!sc*/
+data-styled.g16[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
+.bKKBoo{margin-bottom:16px;font-size:14.4px;color:#868e96;}/*!sc*/
+data-styled.g17[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
+.hlgCLY{margin-bottom:32px;line-height:1.7;font-size:15px;color:#404040;word-break:break-all;}/*!sc*/
+data-styled.g18[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
+.cUedeU{height:48px;}/*!sc*/
+data-styled.g22[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUedeU,"}/*!sc*/
 .cIxGdo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}/*!sc*/
 @media (max-width:768px){.cIxGdo{padding:0 15px;}}/*!sc*/
-data-styled.g11[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
+data-styled.g24[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
 .dpAebu{-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;margin-right:16px;width:128px;height:128px;border-radius:999px;background-image:url(https://023-dev.github.io//profile.png);background-size:cover;background-position:center;}/*!sc*/
-data-styled.g12[id="Bio__Profile-sc-5v8ml6-1"]{content:"dpAebu,"}/*!sc*/
+data-styled.g25[id="Bio__Profile-sc-5v8ml6-1"]{content:"dpAebu,"}/*!sc*/
 .zdqtp{margin-bottom:4.8px;font-size:24px;font-weight:700;color:#191919;}/*!sc*/
-data-styled.g13[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
+data-styled.g26[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
 .hskwiv{margin-bottom:11.2px;line-height:1.5;font-size:16px;color:#404040;}/*!sc*/
-data-styled.g14[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
+data-styled.g27[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
 .cZRWgC a{margin-right:9.6px;}/*!sc*/
 .cZRWgC svg{width:25.6px;height:25.6px;cursor:pointer;}/*!sc*/
 .cZRWgC svg path{fill:#868e96;-webkit-transition:fill 0.3s;transition:fill 0.3s;}/*!sc*/
 .cZRWgC a:hover svg path{fill:#191919;}/*!sc*/
-data-styled.g15[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
-.cUedeU{height:48px;}/*!sc*/
-data-styled.g16[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUedeU,"}/*!sc*/
-.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
-data-styled.g17[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
-.fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
-data-styled.g18[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
-.OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-.OSwVR:hover{background-color:#dee2e6;}/*!sc*/
-data-styled.g19[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
+data-styled.g28[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
+.jCYmBW{position:relative;}/*!sc*/
+data-styled.g29[id="SideTagList__RelativeWrapper-sc-11pn9fc-0"]{content:"jCYmBW,"}/*!sc*/
+.fhiNKx{position:absolute;left:112%;top:0px;width:200px;height:100px;font-size:16px;}/*!sc*/
+@media (max-width:1300px){.fhiNKx{display:none;}}/*!sc*/
+data-styled.g30[id="SideTagList__Wrapper-sc-11pn9fc-1"]{content:"fhiNKx,"}/*!sc*/
+.hJSGhN{margin-bottom:25px;font-weight:bold;color:#404040;}/*!sc*/
+data-styled.g31[id="SideTagList__Title-sc-11pn9fc-2"]{content:"hJSGhN,"}/*!sc*/
+.eplOOa{margin-bottom:16px;color:#868e96;cursor:pointer;-webkit-transition:color 0.3s;transition:color 0.3s;}/*!sc*/
+.eplOOa:hover{color:#191919;}/*!sc*/
+.eplOOa > a{color:inherit;-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
+data-styled.g32[id="SideTagList__Tag-sc-11pn9fc-3"]{content:"eplOOa,"}/*!sc*/
 .czXDrk{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;gap:15px;border-bottom:1px solid #e9ecef;margin-top:35px;margin-bottom:48px;}/*!sc*/
 .czXDrk a{-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
-data-styled.g46[id="Tab__TabWrapper-sc-1ebif1p-0"]{content:"czXDrk,"}/*!sc*/
+data-styled.g33[id="Tab__TabWrapper-sc-1ebif1p-0"]{content:"czXDrk,"}/*!sc*/
 .gSgVxb{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 10px;height:43px;background-color:transparent;border:none;border-bottom:2px solid;border-bottom-color:#191919;font-size:14px;color:#191919;font-weight:bold;-webkit-letter-spacing:1px;-moz-letter-spacing:1px;-ms-letter-spacing:1px;letter-spacing:1px;cursor:pointer;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .gSgVxb:hover{color:#191919;border-bottom-color:#191919;}/*!sc*/
 .gSgVxb svg{margin-right:10px;height:20px;}/*!sc*/
 .dtEfKd{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 10px;height:43px;background-color:transparent;border:none;border-bottom:2px solid;border-bottom-color:transparent;font-size:14px;color:#868e96;font-weight:normal;-webkit-letter-spacing:1px;-moz-letter-spacing:1px;-ms-letter-spacing:1px;letter-spacing:1px;cursor:pointer;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .dtEfKd:hover{color:#191919;border-bottom-color:#e9ecef;}/*!sc*/
 .dtEfKd svg{margin-right:10px;height:20px;}/*!sc*/
-data-styled.g47[id="Tab__TabButton-sc-1ebif1p-1"]{content:"gSgVxb,dtEfKd,"}/*!sc*/
+data-styled.g34[id="Tab__TabButton-sc-1ebif1p-1"]{content:"gSgVxb,dtEfKd,"}/*!sc*/
 .bXRJvD{display:inline-block;margin-left:7px;padding:3px 6px;border-radius:50px;background-color:#f1f3f5;color:#404040;font-weight:normal;font-size:13px;-webkit-letter-spacing:0.3px;-moz-letter-spacing:0.3px;-ms-letter-spacing:0.3px;letter-spacing:0.3px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-data-styled.g48[id="Tab__Badge-sc-1ebif1p-2"]{content:"bXRJvD,"}/*!sc*/
-.cYswnL{margin-bottom:24px;font-size:32px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
-.cYswnL > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-.cYswnL > a:hover{color:#404040;}/*!sc*/
-data-styled.g52[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"cYswnL,"}/*!sc*/
-@media (max-width:768px){.euTAqz{padding:0 10px;}}/*!sc*/
-data-styled.g53[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
-.bZxncx{position:relative;top:0;-webkit-transition:all 0.5s;transition:all 0.5s;}/*!sc*/
-@media (max-width:768px){.bZxncx{padding:0 5px;}}/*!sc*/
-data-styled.g54[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
-.bKKBoo{margin-bottom:16px;font-size:14.4px;color:#868e96;}/*!sc*/
-data-styled.g55[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
-.hlgCLY{margin-bottom:32px;line-height:1.7;font-size:15px;color:#404040;word-break:break-all;}/*!sc*/
-data-styled.g56[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
-.jCYmBW{position:relative;}/*!sc*/
-data-styled.g57[id="SideTagList__RelativeWrapper-sc-11pn9fc-0"]{content:"jCYmBW,"}/*!sc*/
-.fhiNKx{position:absolute;left:112%;top:0px;width:200px;height:100px;font-size:16px;}/*!sc*/
-@media (max-width:1300px){.fhiNKx{display:none;}}/*!sc*/
-data-styled.g58[id="SideTagList__Wrapper-sc-11pn9fc-1"]{content:"fhiNKx,"}/*!sc*/
-.hJSGhN{margin-bottom:25px;font-weight:bold;color:#404040;}/*!sc*/
-data-styled.g59[id="SideTagList__Title-sc-11pn9fc-2"]{content:"hJSGhN,"}/*!sc*/
-.eplOOa{margin-bottom:16px;color:#868e96;cursor:pointer;-webkit-transition:color 0.3s;transition:color 0.3s;}/*!sc*/
-.eplOOa:hover{color:#191919;}/*!sc*/
-.eplOOa > a{color:inherit;-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
-data-styled.g60[id="SideTagList__Tag-sc-11pn9fc-3"]{content:"eplOOa,"}/*!sc*/
+data-styled.g35[id="Tab__Badge-sc-1ebif1p-2"]{content:"bXRJvD,"}/*!sc*/
 </style><title data-react-helmet="true">기록도 록이다</title><link rel="icon" href="/favicon-32x32.png?v=b1d8ee86fb35dc7434b6a3461571e431" type="image/png"/><link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><style type="text/css">
     .heading-anchor.before {
       position: absolute;
@@ -147,8 +147,8 @@ data-styled.g60[id="SideTagList__Tag-sc-11pn9fc-3"]{content:"eplOOa,"}/*!sc*/
 프로그램이 실행 중 경로에 존재하는 코드들을 하나하나 확인하는 것 왜 사용할까? 주석처럼 코…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Java"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Java</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/2776/">2776 암기왕</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 05, 2024</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">암기왕  풀이 문제를 보면 해당 문제는 탐색 알고리즘을 사용해서 해결하라는 것을 알 수 있다.
 어떤 탐색 알고리즘을 사용하냐는 시간제한과 실제 탐색해야할 개수를 보고 선택해야 한다.
 내가 생각한 건 2가지 방식이다.
-하나는 순회하면서 직접 탐색하여 해결하는 방식과 나머지 하나는 이분 탐색으로 해결하는 방식이다.
-직접 탐색에 경우는</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Algorithm"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Algorithm</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/writing-guide-kr/">🤔 3. 작성 가이드</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">April 03, 2021</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">1. 포스트 추가하기  경로에 새로운 마크다운 파일을 생성하여 여러분의 글을 추가할 수 있습니다. 1-1. 포스트 파일 구조 새로운 문서를 추가하는 방법에는 두가지가 있습니다. 첫번째는 디렉토리 없이 문서를 생성하는 방법입니다. 만약 여러분이 Javascript 에 관한 문서를 생성한다면,  파일을  디렉토리에 추가할 수 있습니다. 두번째 방법은 먼저 디…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=hoodie"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">hoodie</div></a><a href="/tags/?q=writing-guide"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">writing-guide</div></a></div></div></div></div><footer class="Footer__FooterWrapper-sc-1qfqdid-0 gUOgk">© <!-- -->기록도 록이다<!-- -->, Built with Gatsby and<!-- --> <a href="https://github.com/devHudi/gatsby-starter-hoodie" target="blank">gatsby-starter-hoodie</a> <!-- -->theme.</footer></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
+하나는 순차 탐색하여 해결하는 방식과 나머지 하나는 이분 탐색으로 해결하는 방식이다.
+직접 탐색에 경우는 과 이 각가 최대 1,000,000…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Algorithm"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Algorithm</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/writing-guide-kr/">🤔 3. 작성 가이드</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">April 03, 2021</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">1. 포스트 추가하기  경로에 새로운 마크다운 파일을 생성하여 여러분의 글을 추가할 수 있습니다. 1-1. 포스트 파일 구조 새로운 문서를 추가하는 방법에는 두가지가 있습니다. 첫번째는 디렉토리 없이 문서를 생성하는 방법입니다. 만약 여러분이 Javascript 에 관한 문서를 생성한다면,  파일을  디렉토리에 추가할 수 있습니다. 두번째 방법은 먼저 디…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=hoodie"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">hoodie</div></a><a href="/tags/?q=writing-guide"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">writing-guide</div></a></div></div></div></div><footer class="Footer__FooterWrapper-sc-1qfqdid-0 gUOgk">© <!-- -->기록도 록이다<!-- -->, Built with Gatsby and<!-- --> <a href="https://github.com/devHudi/gatsby-starter-hoodie" target="blank">gatsby-starter-hoodie</a> <!-- -->theme.</footer></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
