--- a/search/index.html
+++ b/search/index.html
@@ -34,42 +34,42 @@ data-styled.g9[id="Body__BodyWrapper-sc-v34kqr-0"]{content:"oVFRU,"}/*!sc*/
 .gUOgk{margin-top:32px;padding:40px 0;border-top:1px solid #e9ecef;text-align:center;font-size:11pt;font-weight:lighter;color:#404040;}/*!sc*/
 .gUOgk > a{color:#191919;}/*!sc*/
 data-styled.g10[id="Footer__FooterWrapper-sc-1qfqdid-0"]{content:"gUOgk,"}/*!sc*/
-.cUecZP{height:70px;}/*!sc*/
-data-styled.g16[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUecZP,"}/*!sc*/
-.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
-data-styled.g17[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
-.fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
-data-styled.g18[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
-.OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-.OSwVR:hover{background-color:#dee2e6;}/*!sc*/
-data-styled.g19[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
 .kdouQu{margin-bottom:24px;font-size:19.2px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
 .kdouQu > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .kdouQu > a:hover{color:#404040;}/*!sc*/
 .cYswnL{margin-bottom:24px;font-size:32px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
 .cYswnL > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .cYswnL > a:hover{color:#404040;}/*!sc*/
-data-styled.g52[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"kdouQu,cYswnL,"}/*!sc*/
+data-styled.g11[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"kdouQu,cYswnL,"}/*!sc*/
+.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
+data-styled.g12[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
+.fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
+data-styled.g13[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
+.OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
+.OSwVR:hover{background-color:#dee2e6;}/*!sc*/
+data-styled.g14[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
 @media (max-width:768px){.euTAqz{padding:0 10px;}}/*!sc*/
-data-styled.g53[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
+data-styled.g15[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
 .bZxncx{position:relative;top:0;-webkit-transition:all 0.5s;transition:all 0.5s;}/*!sc*/
 @media (max-width:768px){.bZxncx{padding:0 5px;}}/*!sc*/
-data-styled.g54[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
+data-styled.g16[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
 .bKKBoo{margin-bottom:16px;font-size:14.4px;color:#868e96;}/*!sc*/
-data-styled.g55[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
+data-styled.g17[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
 .hlgCLY{margin-bottom:32px;line-height:1.7;font-size:15px;color:#404040;word-break:break-all;}/*!sc*/
-data-styled.g56[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
+data-styled.g18[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
 .eihHri{position:relative;}/*!sc*/
-data-styled.g69[id="TextField__Wrapper-sc-x9cxl4-0"]{content:"eihHri,"}/*!sc*/
+data-styled.g19[id="TextField__Wrapper-sc-x9cxl4-0"]{content:"eihHri,"}/*!sc*/
 .jIHunx{position:absolute;top:12px;left:18px;font-size:20px;color:#ced4da;text-shadow:0 0 5px #ced4da;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-data-styled.g70[id="TextField__Icon-sc-x9cxl4-1"]{content:"jIHunx,"}/*!sc*/
+data-styled.g20[id="TextField__Icon-sc-x9cxl4-1"]{content:"jIHunx,"}/*!sc*/
 .cVhsKc{padding:14px 19.2px 12px 50px;width:100%;border:1px solid #ced4da;border-radius:1vh;background-color:transparent;font-size:16px;color:#191919;box-sizing:border-box;outline:none;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .cVhsKc:focus{border:1px solid #adb5bd;}/*!sc*/
 .cVhsKc:focus + .TextField__Icon-sc-x9cxl4-1{color:#adb5bd;}/*!sc*/
-data-styled.g71[id="TextField__Input-sc-x9cxl4-2"]{content:"cVhsKc,"}/*!sc*/
+data-styled.g21[id="TextField__Input-sc-x9cxl4-2"]{content:"cVhsKc,"}/*!sc*/
+.cUecZP{height:70px;}/*!sc*/
+data-styled.g22[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUecZP,"}/*!sc*/
 .jECwfK{margin-top:20px;}/*!sc*/
 @media (max-width:768px){.jECwfK{padding:0 15px;}}/*!sc*/
-data-styled.g72[id="search__SearchWrapper-sc-1ljtwq8-0"]{content:"jECwfK,"}/*!sc*/
+data-styled.g23[id="search__SearchWrapper-sc-1ljtwq8-0"]{content:"jECwfK,"}/*!sc*/
 </style><title data-react-helmet="true">기록도 록이다</title><link rel="icon" href="/favicon-32x32.png?v=b1d8ee86fb35dc7434b6a3461571e431" type="image/png"/><link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=b1d8ee86fb35dc7434b6a3461571e431"/><style type="text/css">
     .heading-anchor.before {
       position: absolute;
@@ -124,8 +124,8 @@ data-styled.g72[id="search__SearchWrapper-sc-1ljtwq8-0"]{content:"jECwfK,"}/*!sc
 프로그램이 실행 중 경로에 존재하는 코드들을 하나하나 확인하는 것 왜 사용할까? 주석처럼 코…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Java"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Java</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/2776/">2776 암기왕</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 05, 2024</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">암기왕  풀이 문제를 보면 해당 문제는 탐색 알고리즘을 사용해서 해결하라는 것을 알 수 있다.
 어떤 탐색 알고리즘을 사용하냐는 시간제한과 실제 탐색해야할 개수를 보고 선택해야 한다.
 내가 생각한 건 2가지 방식이다.
-하나는 순회하면서 직접 탐색하여 해결하는 방식과 나머지 하나는 이분 탐색으로 해결하는 방식이다.
-직접 탐색에 경우는</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Algorithm"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Algorithm</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/writing-guide-kr/">🤔 3. 작성 가이드</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">April 03, 2021</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">1. 포스트 추가하기  경로에 새로운 마크다운 파일을 생성하여 여러분의 글을 추가할 수 있습니다. 1-1. 포스트 파일 구조 새로운 문서를 추가하는 방법에는 두가지가 있습니다. 첫번째는 디렉토리 없이 문서를 생성하는 방법입니다. 만약 여러분이 Javascript 에 관한 문서를 생성한다면,  파일을  디렉토리에 추가할 수 있습니다. 두번째 방법은 먼저 디…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=hoodie"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">hoodie</div></a><a href="/tags/?q=writing-guide"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">writing-guide</div></a></div></div></div></div><footer class="Footer__FooterWrapper-sc-1qfqdid-0 gUOgk">© <!-- -->기록도 록이다<!-- -->, Built with Gatsby and<!-- --> <a href="https://github.com/devHudi/gatsby-starter-hoodie" target="blank">gatsby-starter-hoodie</a> <!-- -->theme.</footer></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/search/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
+하나는 순차 탐색하여 해결하는 방식과 나머지 하나는 이분 탐색으로 해결하는 방식이다.
+직접 탐색에 경우는 과 이 각가 최대 1,000,000…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=Algorithm"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">Algorithm</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/writing-guide-kr/">🤔 3. 작성 가이드</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">April 03, 2021</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">1. 포스트 추가하기  경로에 새로운 마크다운 파일을 생성하여 여러분의 글을 추가할 수 있습니다. 1-1. 포스트 파일 구조 새로운 문서를 추가하는 방법에는 두가지가 있습니다. 첫번째는 디렉토리 없이 문서를 생성하는 방법입니다. 만약 여러분이 Javascript 에 관한 문서를 생성한다면,  파일을  디렉토리에 추가할 수 있습니다. 두번째 방법은 먼저 디…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=hoodie"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">hoodie</div></a><a href="/tags/?q=writing-guide"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">writing-guide</div></a></div></div></div></div><footer class="Footer__FooterWrapper-sc-1qfqdid-0 gUOgk">© <!-- -->기록도 록이다<!-- -->, Built with Gatsby and<!-- --> <a href="https://github.com/devHudi/gatsby-starter-hoodie" target="blank">gatsby-starter-hoodie</a> <!-- -->theme.</footer></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/search/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
