--- a/about/index.html
+++ b/about/index.html
@@ -266,7 +266,7 @@ And pursue raw intelligence. I believe that the best way to learn is to learn fr
 <p>공부 시간은 무한하지 않다.
 아무리 오래 책상에 앉아 있어도 집중하지 못하면 좋은 결과를 얻을 수 없다.
 그러니 먼저, 스스로 얼마나 집중할 수 있는지 파악해야 한다.
-그렇게 정한 시간은 당분간 바꾸지 말고, 최대한 몰입해보자.</p>
+그렇게 정한 시간은 당분간 바꾸지 말고, 최대한 몰입한다.</p>
 <h2 id="번아웃-Burnout" style="position:relative;"><a href="#%EB%B2%88%EC%95%84%EC%9B%83-Burnout" aria-label="번아웃 Burnout permalink" class="heading-anchor before"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"><path d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"/></svg></a>번아웃 (Burnout)</h2>
 <p>“인내해야 한다. 인생에는 내리막길도 있다.”</p>
 <p>번아웃은 정말 쉽지 않은 상태다.
